[WIP] 3D objects importation: 3D custom objects

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>three.js</file>
         <file>qmlUtilities.js</file>
+        <file>Loaders/objLoader.js</file>
     </qresource>
 </RCC>
